changed users assigned into project teams